--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset = "UTF-8">
         <link rel = "stylesheet" type = "text/css" href = "css/iptracker.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-        <link rel = "shortcut icon" type = "image/jpg" href = "assets/logo.jpg">
+        <link rel = "shortcut icon" type = "image/x-icon" href = "assets/iconopac.ico">
         <title>IPTracker</title>
     </head>
 
