--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                         <p id = "provider"><strong>Provider: </strong></p>
                     </div>
                 </section>
+                <footer id="foo">by z3ox1s</footer>
             </center>
         </div>
-
         <script src = "js/iptracker.js"></script>
     </body>
 </html>
